# vigilante

./: .gitignore  CLAUDE.md  README.md  electron-builder.yml  index.html  main.js  package-lock.json  package.json  renderer.js  stream-server.js
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.mjs  vendor.mjs
src/: index.html  ipc.js  main.sass  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config_store.rs  discovery.rs  lib.rs  main.rs  menu.rs  relay_server.rs  stream_config.rs
src/main/: StreamService.js  index.js
src/main/domain/: StreamConfiguration.js
src/main/infrastructure/: ConfigurationRepository.js  DiscoveryService.js  StreamRelayServer.js
src/preload/: preload.cjs
src/renderer/: index.html  renderer.js
src/renderer/styles/: main.css  main.css.map  main.sass
